--- a/index.css
+++ b/index.css
@@ -86,23 +86,33 @@ body {
     line-height: 1.6;
 }
 
-
+/* Sección de presentación */
 .presentation-section {
-    text-align: center;
-    margin: 40px auto;
+    display: flex;
+    justify-content: center;
     padding: 20px;
-    background-color: #2e2e2e;
+    background-color: #181818;
+}
+
+/* Contenedor del iframe */
+.presentation-container {
+    position: relative;
+    width: 100%;
+    max-width: 800px; /* Tamaño máximo */
+    aspect-ratio: 16 / 10; /* Mantener proporción */
+    box-shadow: 0 2px 8px rgba(63, 69, 81, 0.16);
+    overflow: hidden;
     border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.presentation-section h2 {
-    color: #ff8a50;
-    font-size: 28px;
-    margin-bottom: 20px;
-    text-transform: uppercase;
+.presentation-container iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border: none;
 }
-
 
 /* Sección de contacto */
 .contact-section {
@@ -172,11 +182,6 @@ body {
     transform: translateY(-2px);
 }
 
-/* Suavizar desplazamiento (scroll) */
-html {
-    scroll-behavior: smooth;
-}
-
 /* Robot */
 .robot {
     width: 100px;
@@ -225,3 +230,30 @@ html {
     margin: 0 auto;
     border-radius: 8px;
 }
+
+/* Suavizar desplazamiento (scroll) */
+html {
+    scroll-behavior: smooth;
+}
+
+/* Media Queries para dispositivos móviles */
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+    }
+
+    .project-title {
+        font-size: 28px;
+    }
+
+    .presentation-container {
+        max-width: 100%;
+    }
+
+    .contact-form input,
+    .contact-form textarea,
+    .contact-form button {
+        font-size: 14px;
+    }
+}
+
